# statement-analyzer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: generate_charts.py  generate_data.py  generate_pdfs.py  pdf_builder.py
docs/learning/: _data.json
src/statement_analyzer/: __init__.py  articulation.py  cli.py  config.py  ingest.py  model.py  normalize.py  ratios.py  report.py
tests/: conftest.py  csv_fixture.py  test_articulation.py  test_ingest.py  test_model.py  test_normalize.py  test_normalize_derivations.py  test_ratios.py  test_report.py
tests/fixtures/: known_good.csv
