[project]
name = "statement-analyzer"
version = "0.1.0"
description = "Ingest SEC filings, verify statement articulation, compute ratios."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pandas>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
 
[project.scripts]
statement-analyzer = "statement_analyzer.cli:main"
 
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
 
[tool.setuptools.packages.find]
where = ["src"]